--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,8 +13,13 @@
   <body>
     <a href="/">Home</a>
     <a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
+    <a href="/blog/">Blog</a>
 
-    <h1>Astro Tutorial</h1>
+    <h1>About Page</h1>
+    <h2>I'm learning</h2>
+    <p>
+      I'm a frontend developer used to building SPAs with React and wanting to
+      expand my range
+    </p>
   </body>
 </html>
