--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -13,8 +13,12 @@
   <body>
     <a href="/">Home</a>
     <a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
+    <a href="/blog/">Blog</a>
 
-    <h1>Astro Tutorial</h1>
+    <h1>Blog</h1>
+    <h2>This is where I would put my blog...</h2>
+    <p>
+      ...if I had one!
+    </p>
   </body>
 </html>
