--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,17 @@
 ---
+import "../styles/global.css";
 
+const pageTitle = "This is a page about ME, ME!";
+const skills = [
+  "HTML",
+  "CSS",
+  "JavaScript",
+  "React",
+  "Astro",
+  "Writing Docs",
+  "Crushing it",
+];
+const skillColour = "teal;";
 ---
 
 <html lang="en">
@@ -8,18 +20,33 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
+    <title>{pageTitle}</title>
+    <style define:vars={{ skillColour }}>
+      h1 {
+        color: purple;
+        font-size: 4rem;
+      }
+
+      .skill {
+        color: var(--skillColour);
+        font-weight: bold;
+      }
+    </style>
   </head>
   <body>
     <a href="/">Home</a>
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
 
-    <h1>About Page</h1>
+    <h1>{pageTitle}</h1>
     <h2>I'm learning</h2>
     <p>
       I'm a frontend developer used to building SPAs with React and wanting to
       expand my range
     </p>
+    <p>My skills are:</p>
+    <ul>
+      {skills.map(skill => <li class="skill">{skill}</li>)}
+    </ul>
   </body>
 </html>
