learn about components, scripts and styling

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-import "../styles/global.css";
+import BaseLayout from "../layouts/BaseLayout.astro";
 
 const pageTitle = "This is a page about ME, ME!";
 const skills = [
@@ -11,42 +11,28 @@ const skills = [
   "Writing Docs",
   "Crushing it",
 ];
-const skillColour = "teal;";
+const skillColour = "teal";
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{pageTitle}</title>
-    <style define:vars={{ skillColour }}>
-      h1 {
-        color: purple;
-        font-size: 4rem;
-      }
+<BaseLayout pageTitle={pageTitle}>
+  <h2>I'm learning</h2>
+  <p>
+    I'm a frontend developer used to building SPAs with React and wanting to
+    expand my range
+  </p>
+  <p>My skills are:</p>
+  <ul>
+    {skills.map(skill => <li class="skill">{skill}</li>)}
+  </ul>
+  <style define:vars={{ skillColour }}>
+    h1 {
+      color: purple;
+      font-size: 4rem;
+    }
 
-      .skill {
-        color: var(--skillColour);
-        font-weight: bold;
-      }
-    </style>
-  </head>
-  <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
-
-    <h1>{pageTitle}</h1>
-    <h2>I'm learning</h2>
-    <p>
-      I'm a frontend developer used to building SPAs with React and wanting to
-      expand my range
-    </p>
-    <p>My skills are:</p>
-    <ul>
-      {skills.map(skill => <li class="skill">{skill}</li>)}
-    </ul>
-  </body>
-</html>
+    .skill {
+      color: var(--skillColour);
+      font-weight: bold;
+    }
+  </style>
+</BaseLayout>
