--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,6 +12,7 @@ const skills = [
   "Crushing it",
 ];
 const skillColour = "teal";
+const finished = true;
 ---
 
 <BaseLayout pageTitle={pageTitle}>
